--- a/mobile_app/app/src/main/res/layout/fragment4.xml
+++ b/mobile_app/app/src/main/res/layout/fragment4.xml
@@ -3,11 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/list"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/menu_item4"
-        android:textSize="30sp"/>
+        android:layout_width="match_parent">
+    </ListView>
 
 </RelativeLayout>
