--- a/mobile_app/app/src/main/res/layout/fragment1.xml
+++ b/mobile_app/app/src/main/res/layout/fragment1.xml
@@ -4,24 +4,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--android:id="@+id/toolbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@android:color/white">-->
+        <!--<RelativeLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
+            <!--<ImageView-->
+                <!--android:id="@+id/toolbar_img"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignParentTop="true"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:scaleType="centerCrop"-->
+                <!--android:src="@drawable/ic_hash_name" />-->
+        <!--</RelativeLayout>-->
+    <!--</android.support.v7.widget.Toolbar>-->
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/toolbar_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_hash_name" />
-        </RelativeLayout>
-    </android.support.v7.widget.Toolbar>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme" />
+
+
+    <SearchView
+        android:id="@+id/searchview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/textView"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:id="@+id/textView"
@@ -39,11 +57,13 @@
         android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
-        android:layout_marginTop="32dp"
-        android:layout_toStartOf="@+id/imageView2"
+        android:layout_marginTop="60dp"
+        android:layout_marginStart="30dp"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
         android:scaleType="fitXY"
+        android:clickable="true"
+        android:focusable="true"
         android:src="@drawable/image_item1" />
 
     <ImageView
@@ -52,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@+id/imageView1"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="30dp"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
         android:scaleType="fitXY"
@@ -63,7 +83,7 @@
         android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView1"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="30dp"
         android:layout_toStartOf="@+id/imageView4"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
@@ -80,6 +100,5 @@
         android:cropToPadding="false"
         android:scaleType="fitXY"
         android:src="@drawable/image_item1" />
-
 
 </RelativeLayout>
