--- a/mobile_app/app/src/main/res/layout/dish.xml
+++ b/mobile_app/app/src/main/res/layout/dish.xml
@@ -36,8 +36,8 @@
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_alignStart="@+id/textView2"
+        android:layout_height="250dp"
+        android:layout_marginLeft="30dp"
         android:layout_below="@+id/textView2"
         android:scrollbars="vertical"
         android:textSize="18sp"
@@ -47,36 +47,17 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView3"
+        android:layout_alignStart="@+id/textView2"
         android:layout_below="@+id/textView3"
-        android:text="Nutritions"
+        android:text="Cooking instructions"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_alignStart="@+id/textView4"
-        android:layout_below="@+id/textView4"
-        android:scrollbars="vertical"
-        android:textSize="18sp"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView5"
-        android:layout_below="@+id/textView5"
-        android:text="Cooking instructions"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignStart="@+id/textView6"
-        android:layout_below="@+id/textView6"
+        android:layout_alignStart="@+id/textView2"
+        android:layout_below="@+id/textView4"
         android:scrollbars="vertical"
         android:textSize="15sp"
         android:autoLink="web"
