--- a/mobile_app/app/src/main/res/layout/dish.xml
+++ b/mobile_app/app/src/main/res/layout/dish.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -36,31 +38,31 @@
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_marginLeft="30dp"
+        android:layout_height="320dp"
+        android:layout_above="@+id/favView"
         android:layout_below="@+id/textView2"
+        android:layout_marginLeft="30dp"
         android:scrollbars="vertical"
-        android:textSize="18sp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/textView4"
+    <Button
+        android:id="@+id/buttonInstruction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_below="@+id/textView3"
-        android:text="Cooking instructions"
-        android:textSize="20sp" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:text="Cooking instructions" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_below="@+id/textView4"
-        android:scrollbars="vertical"
-        android:textSize="15sp"
-        android:autoLink="web"
-        android:text="weblink" />
+    <ImageView
+        android:id="@+id/favView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="10dp"
+        android:clickable="true"
+        android:background="@drawable/ic_favorite_border_black_24dp"/>
 
 </RelativeLayout>
