--- a/mobile_app/app/src/main/res/layout/activity_viewdish.xml
+++ b/mobile_app/app/src/main/res/layout/activity_viewdish.xml
@@ -62,7 +62,6 @@
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="10dp"
         android:layout_marginEnd="10dp"
-        android:clickable="true"
-        android:background="@drawable/ic_favorite_border_black_24dp"/>
+        android:clickable="true"/>
 
 </RelativeLayout>
