--- a/mobile_app/app/src/main/res/layout/fragment1.xml
+++ b/mobile_app/app/src/main/res/layout/fragment1.xml
@@ -16,8 +16,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="@color/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:minHeight="?android:attr/actionBarSize"/>
 
     <SearchView
         android:id="@+id/searchView"
