--- a/mobile_app/app/src/main/res/layout/fragment5.xml
+++ b/mobile_app/app/src/main/res/layout/fragment5.xml
@@ -1,4 +1,4 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,13 +10,16 @@
         android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:text="@string/retrieve_from_server"
-        tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="318dp" />
+        android:layout_marginTop="300dp"
+        android:layout_marginStart="32dp" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/button2"
+        android:layout_marginTop="217dp"
         android:text="@string/upload_to_server"
         tools:layout_editor_absoluteX="86dp"
         tools:layout_editor_absoluteY="433dp" />
@@ -38,16 +41,21 @@
         style="@android:style/Widget.TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView5"
+        android:layout_toEndOf="@+id/textView5"
         android:text="@string/username"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textSize="24sp"
-        app:layout_constraintTop_toTopOf="@+id/textView5"
-        app:layout_constraintStart_toEndOf="@+id/textView5" />
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toTopOf="@+id/textView5" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/button2"
+        android:layout_marginTop="137dp"
         android:text="@string/status"
         tools:layout_editor_absoluteX="86dp"
         tools:layout_editor_absoluteY="199dp" />
@@ -64,16 +72,16 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="5dp"
+        android:layout_width="384dp"
+        android:layout_height="48dp"
+        android:layout_alignBottom="@+id/toolbar2"
+        android:layout_centerHorizontal="true"
         android:gravity="center_vertical"
         android:text="@string/profile"
         android:textAlignment="viewStart"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="24sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
