--- a/mobile_app/app/src/main/res/layout/fragment5.xml
+++ b/mobile_app/app/src/main/res/layout/fragment5.xml
@@ -9,9 +9,9 @@
         android:id="@+id/button2"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="193dp"
+        android:layout_marginTop="420dp"
         android:text="@string/retrieve_from_server" />
 
     <Button
