--- a/mobile_app/app/src/main/res/layout/fragment5.xml
+++ b/mobile_app/app/src/main/res/layout/fragment5.xml
@@ -73,13 +73,12 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="384dp"
-        android:layout_height="48dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_alignBottom="@+id/toolbar2"
-        android:layout_centerHorizontal="true"
         android:gravity="center_vertical"
         android:text="@string/profile"
-        android:textAlignment="viewStart"
+        android:layout_marginStart="10dp"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
